--- a/default_theme/assets/style.css
+++ b/default_theme/assets/style.css
@@ -1,98 +1,124 @@
+@font-face {
+  font-family: 'Asap';
+  font-weight: 400;
+  font-style: normal;
+  src: url('fonts/Asap-regular/Asap-regular.eot?#iefix') format('embedded-opentype'),
+       local('Asap'),
+       local('Asap-regular'),
+       url('fonts/Asap-regular/Asap-regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Asap';
+  font-weight: 700;
+  font-style: normal;
+  src: url('fonts/Asap-700/Asap-700.eot?#iefix') format('embedded-opentype'),
+       local('Asap Bold'),
+       local('Asap-700'),
+       url('fonts/Asap-700/Asap-700.woff2') format('woff2');
+}
+
 .documentation {
-  font-family: Helvetica, sans-serif;
-  color: #666;
-  line-height: 1.5;
-  background: #f5f5f5;
+  font-family: 'Asap';
+  overflow-x: hidden;
+}
+.documentation a {
+  color: #298EE6;
 }
 
-.black {
-  color: #666;
+.documentation a.black {
+  color:#052E52;
+}
+.container-small {
+  max-width: 58rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+.font-smaller {
+  font-size:80%;
+}
+.dark a.quiet {
+  color: #fff;
+}
+.dark a {
+  color: #D2D2D2;
+}
+.fade { opacity:0.50; }
+.button-indent {
+  padding: .25rem 1.5rem;
+  font-size: 90%;
+}
+.section-indent { border-left: 2px solid #eee; }
+
+.force-inline * { display:inline; }
+
+section:target {
+  background: #FAFAFA;
 }
 
-.bg-white {
-  background-color: #fff;
+.documentation-sidebar a:active {
+  background: #298EE6;
+  color: #fff;
 }
-
+.documentation h1,
+.documentation h2,
+.documentation h3,
+.documentation h4,
+.documentation h5,
+.documentation h6 {
+  font-family: 'Asap', sans-serif;
+  font-weight: 700;
+}
+p {
+  font-family: 'Asap', sans-serif;
+  line-height: 1.7rem;
+  color: #464646;
+}
+.documentation pre,
+.documentation code,
+.documentation samp {
+  font-family: Consolas, 'Inconsolata', 'Source Code Pro', monospace;
+}
+pre {
+  border-radius: 3px;
+  word-break: break-word;
+  white-space: pre-wrap;
+  display: block;
+}
 h4 {
-  margin: 20px 0 10px 0;
+  font-size: 0.8rem;
 }
-
-.documentation h3 {
-  color: #000;
+.quiet { color:#7D7D7D; }
+.small { font-size: 0.9rem; }
+td { word-break: break-word; }
+th.small { font-size: 0.8rem; }
+.strong { font-weight: 700; }
+li { margin-top: 10px; }
+.keyline-all { border: 1px solid #7D7D7D; }
+.keyline-light { border: 1px solid #E0E0E0; }
+.fill-light { background: #efefef; }
+li > code,
+p > code,
+td > code > a{
+  font-weight: 700;
 }
+.documentation pre {
+  padding: 1rem;
+  background: #052E52;
+  color: #e6e1dc;
+  font-size: 0.9rem;
 
-.border-bottom {
-  border-color: #ddd;
 }
-
-a {
-  color: #1184CE;
-  text-decoration: none;
+.bg-midnight { background: #052E52; }
+.dark-link a, .dark-link code { color: #052E52; }
+table td,
+table p {
+  font-size: 0.9rem;
+  line-height: 1.3rem;
 }
-
-.documentation a[href]:hover {
-  text-decoration: underline;
-}
-
-a:hover {
-  cursor: pointer;
-}
-
-.py1-ul li {
-  padding: 5px 0;
-}
-
-.max-height-100 {
-  max-height: 100%;
-}
-
-.height-viewport-100 {
-  height: 100vh;
-}
-
-section:target h3 {
-  font-weight:700;
-}
-
 .documentation td,
 .documentation th {
-    padding: .25rem .25rem;
-}
-
-h1:hover .anchorjs-link,
-h2:hover .anchorjs-link,
-h3:hover .anchorjs-link,
-h4:hover .anchorjs-link {
-  opacity: 1;
-}
-
-.fix-3 {
-  width: 25%;
-  max-width: 244px;
-}
-
-.fix-3 {
-  width: 25%;
-  max-width: 244px;
-}
-
-@media (min-width: 52em) {
-  .fix-margin-3 {
-    margin-left: 25%;
-  }
-}
-
-.pre, pre, code, .code {
-  font-family: Source Code Pro,Menlo,Consolas,Liberation Mono,monospace;
-  font-size: 14px;
-}
-
-.fill-light {
-  background: #F9F9F9;
-}
-
-.width2 {
-  width: 1rem;
+  padding: .5rem .5rem;
 }
 
 .input {
@@ -106,35 +132,4 @@ h4:hover .anchorjs-link {
   font-size: .875rem;
   border-radius: 3px;
   box-sizing: border-box;
-}
-
-table {
-  border-collapse: collapse;
-}
-
-.prose table th,
-.prose table td {
-  text-align: left;
-  padding:8px;
-  border:1px solid #ddd;
-}
-
-.prose table th:nth-child(1) { border-right: none; }
-.prose table th:nth-child(2) { border-left: none; }
-
-.prose table {
-  border:1px solid #ddd;
-}
-
-.prose-big {
-  font-size: 18px;
-  line-height: 30px;
-}
-
-.quiet {
-  opacity: 0.7;
-}
-
-.minishadow {
-  box-shadow: 2px 2px 10px #f3f3f3;
 }
