--- a/default_theme/assets/style.css
+++ b/default_theme/assets/style.css
@@ -1,23 +1,5 @@
-@font-face {
-  font-family: Asap;
-  font-weight: 400;
-  font-style: normal;
-  src: local('Asap'),
-       local('Asap-regular'),
-       url('fonts/Asap-regular/Asap-regular.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: Asap;
-  font-weight: 700;
-  font-style: normal;
-  src: local('Asap Bold'),
-       local('Asap-700'),
-       url('fonts/Asap-700/Asap-700.woff2') format('woff2');
-}
-
 .documentation {
-  font-family: Asap, system-ui, -apple-system, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
+  font-family: system-ui, -apple-system, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
   overflow-x: hidden;
 }
 .documentation a {
