--- a/default_theme/assets/style.css
+++ b/default_theme/assets/style.css
@@ -46,11 +46,11 @@ section:target {
 .documentation h4,
 .documentation h5,
 .documentation h6 {
-  font-family: initial;
+  font-family: inherit;
   font-weight: 700;
 }
 p {
-  font-family: initial;
+  font-family: inherit;
   line-height: 1.7rem;
   color: #464646;
 }
